# geomods

./: .gitattributes  Makefile.am  README  configure  configure.ac
modules/: Makefile.am
modules/geodesic/: Makefile.am  formulae.scm  geod.scm
modules/geographic/: Makefile.am  color-table.scm  ogr-gmt.scm  rasters.scm  regions.scm  spatial.scm
modules/geographic/dem/: Makefile.am  gdal.scm  gmt.scm  gnuplot.scm  lastools.scm  mbio.scm  vdatum.scm  world-raster.scm
modules/geographic/scripts/: Makefile.am
modules/geographic/scripts/datalist/: Makefile.am  cat.scm  glob.scm  help.scm  info.scm  thunk.scm
modules/geographic/scripts/dem/: Makefile.am  cgrid.scm  dem-build.scm  fuzzy-regions.scm  guess-nodes.scm  help.scm  hillshade.scm  query.scm  vdatum.scm
modules/geographic/scripts/fetch/: Makefile  Makefile.am  Makefile.am~  Makefile.in  charts.scm  cudem.scm  digital-coast.scm  gmrt.scm  help.go  help.scm  help.scm~  hydro.scm  mb.go  mb.scm  mb.scm~  multibeam.scm  national-map.scm  nos.go  nos.scm  srtm.scm  tnm.go  tnm.scm~
modules/geographic/scripts/xyz/: Makefile.am  datalist.scm  dump.scm  filter.scm  help.scm  snarf.scm  vdatum.scm  vectorize.scm
modules/geographic/util/: Makefile.am  popen.scm  regex.scm
modules/hulls/: Makefile.am  convex-hull.scm
modules/xyz/: Makefile.am  datalists.scm  infos.scm  xyz.scm
python/: Makefile  Makefile.am  Makefile.am~  Makefile.in  mblib.py  nos_bounds.py  noslib.py  noslib.py~  tnmlib.py~
python/chartfetch/: Makefile.am  chartfetch.gmt  chartfetch.py.in
python/cudemfetch/: Makefile.am  cudem.gmt  cudemfetch.py.in
python/dcfetch/: Makefile.am  dcbounds.py  dcfetch.py  dcfetch.py.in  digital_coast.gmt
python/dclib/: Makefile.am  dcfetch.py  dclib.py
python/gdal/: LICENSE  Makefile.am  clip_gdal.sh  clip_xyz.sh  gdal_crop.py  gdal_findreplace.py  gdal_histogram.py  gdal_mask.py  gdal_null.py  gdal_query.py  gdal_split.py  has_nulls.py  xyzlib.py
python/gmrtfetch/: Makefile.am  gmrtfetch.py
python/mbfetch/: Makefile.am  mbfetch.py
python/mblib/: Makefile.am  mbfetch.py  mblib.py
python/nosfetch/: Makefile.am  nosfetch.gmt  nosfetch.py  nosfetch.py.in  nosgui.py  noslib.py
python/noslib/: Makefile.am  nosgui.py
python/srtmfetch/: Makefile.am  srtmfetch.py
python/tnmfetch/: Makefile.am  tnmfetch.py
python/tnmlib/: Makefile.am  tnmfetch.py  tnmlib.py
scripts/: Makefile.am
scripts/datalist/: Makefile.am  datalist
scripts/dem/: Makefile.am  dem
scripts/fetch/: Makefile  Makefile.am  Makefile.am~  Makefile.in  fetch  fetch~  mbfetch.py  tnmfetch.py~
scripts/foreign/: Makefile.am
scripts/xyz/: Makefile.am  xyz2shp.py
